--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.17",
     "electron": "^22.3.27",
+    "electron-builder": "^24.9.1",
     "eslint": "^8.56.0",
+    "postcss": "^8.4.34",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "duckdb": "^0.9.2"
   }
 }
