--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
       "module": "commonjs",
       "noImplicitAny": true,
-      "sourceMap": true,
-      "outDir": "dist",
+      // "sourceMap": true,
+      "inlineSourceMap": true,
+      "outDir": "./dist",
       "baseUrl": ".",
       "paths": {
         "*": ["node_modules/*"]
