--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "noImplicitAny": true,
       // "sourceMap": true,
       "inlineSourceMap": true,
+      "resolveJsonModule": true,
       "outDir": "./dist",
       "baseUrl": ".",
       "paths": {
