--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Emilian Adrian Hossu",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/i18n": "^0.13.10",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
