--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/i18n": "^0.13.10",
+    "@types/jquery": "^3.5.29",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
@@ -25,6 +26,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "datatables.net": "^2.0.0",
+    "datatables.net-dt": "^2.0.0",
+    "datatables.net-responsive-dt": "^3.0.0",
     "duckdb": "^0.9.2",
     "eta": "^3.2.0",
     "i18n": "^0.15.1"
