--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Emilian Adrian Hossu",
   "license": "ISC",
   "devDependencies": {
+    "@electron/rebuild": "^3.6.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/i18n": "^0.13.10",
     "@types/jquery": "^3.5.29",
@@ -29,7 +30,7 @@
     "datatables.net": "^2.0.0",
     "datatables.net-dt": "^2.0.0",
     "datatables.net-responsive-dt": "^3.0.0",
-    "duckdb": "^0.9.2",
+    "duckdb": "^0.10.0",
     "eta": "^3.2.0",
     "i18n": "^0.15.1"
   }
