--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "datatables.net-responsive-dt": "^3.0.0",
     "duckdb": "^0.10.0",
     "eta": "^3.2.0",
+    "flatpickr": "^4.6.13",
     "i18n": "^0.15.1"
   }
 }
