--- a/package.json
+++ b/package.json
@@ -7,12 +7,41 @@
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "tail": "npx tailwindcss -i ./src/assets/main.css -o ./dist/main.css --watch",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "npm run build && electron ./dist/main.js",
+    "dist": "npm run build && electron-builder",
+    "pack": "npm run build && electron-builder --dir"
   },
   "author": "Emilian Adrian Hossu",
   "license": "ISC",
+  "main": "./dist/main.js",
+  "build": {
+    "appId": "wb-uzbek",
+    "productName": "CRM",
+    "directories": {
+      "output": "build/output"
+    },
+    "extraResources": [
+    {
+     "from": "src/database/uzbek.duckdb",
+     "to": "uzbek.duckdb"
+    },
+    {
+     "from": "src/assets/",
+     "to": "assets"
+    }
+    ],
+    "win": {
+    "icon": "build/icon.png",
+    "legalTrademarks": "MIT Licence",
+    "target": {
+      "target": "dir",
+      "arch": [
+      "x64"
+      ]
+    }
+    }
+  },
   "devDependencies": {
-    "@electron/rebuild": "^3.6.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/i18n": "^0.13.10",
     "@types/jquery": "^3.5.29",
@@ -20,7 +49,7 @@
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
     "electron": "^22.3.27",
-    "electron-builder": "^24.9.1",
+    "electron-builder": "^24.13.3",
     "eslint": "^8.56.0",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.4.1",
@@ -34,5 +63,6 @@
     "eta": "^3.2.0",
     "flatpickr": "^4.6.13",
     "i18n": "^0.15.1"
-  }
+  },
+  "postinstall": "electron-builder install-app-deps"
 }
