--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/i18n": "^0.13.10",
     "@types/jquery": "^3.5.29",
+    "@types/lodash": "^4.17.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
@@ -64,7 +65,9 @@
     "duckdb": "^0.10.1",
     "eta": "^3.2.0",
     "flatpickr": "^4.6.13",
-    "i18n": "^0.15.1"
+    "i18n": "^0.15.1",
+    "lodash": "^4.17.21",
+    "tippy.js": "^6.3.7"
   },
   "postinstall": "electron-builder install-app-deps"
 }
