--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "autoprefixer": "^10.4.17",
     "electron": "^22.3.27",
     "electron-builder": "^24.13.3",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^8.56.0",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.4.1",
@@ -62,7 +63,7 @@
     "datatables.net": "^2.0.0",
     "datatables.net-dt": "^2.0.0",
     "datatables.net-responsive-dt": "^3.0.0",
-    "duckdb": "^0.10.1",
+    "duckdb": "^0.10.2",
     "eta": "^3.2.0",
     "flatpickr": "^4.6.13",
     "i18n": "^0.15.1",
