--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wb-uzbek",
+  "name": "crm-uzbek",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -11,11 +11,11 @@
     "dist": "npm run build && electron-builder",
     "pack": "npm run build && electron-builder --dir"
   },
-  "author": "World Bank",
+  "author": "CRM Uzbek",
   "license": "UNLICENSED",
   "main": "./dist/main.js",
   "build": {
-    "appId": "wb-uzbek",
+    "appId": "crm-uzbek",
     "productName": "CRM",
     "nodeGypRebuild": false,
     "npmRebuild": true,
