--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/i18n": "^0.13.10",
     "@types/jquery": "^3.5.29",
     "@types/lodash": "^4.17.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
@@ -68,7 +69,8 @@
     "flatpickr": "^4.6.13",
     "i18n": "^0.15.1",
     "lodash": "^4.17.21",
-    "tippy.js": "^6.3.7"
+    "tippy.js": "^6.3.7",
+    "uuid": "^9.0.1"
   },
   "postinstall": "electron-builder install-app-deps"
 }
