--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/i18n": "^0.13.10",
     "@types/jquery": "^3.5.29",
+    "@types/jqueryui": "^1.12.22",
     "@types/lodash": "^4.17.0",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -68,6 +69,8 @@
     "eta": "^3.2.0",
     "flatpickr": "^4.6.13",
     "i18n": "^0.15.1",
+    "jquery-ui": "^1.13.3",
+    "jquery-ui-dist": "^1.13.2",
     "lodash": "^4.17.21",
     "tippy.js": "^6.3.7",
     "uuid": "^9.0.1"
