--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
     "compilerOptions": {
-      "module": "commonjs",
-      "noImplicitAny": true,
-      // "sourceMap": true,
-      "inlineSourceMap": true,
-      "resolveJsonModule": true,
-      "outDir": "./dist",
-      "baseUrl": ".",
-      "paths": {
-        "*": ["node_modules/*"]
-      }
+        "module": "commonjs",
+        "noImplicitAny": true,
+        // "sourceMap": true,
+        "inlineSourceMap": true,
+        "resolveJsonModule": true,
+        "outDir": "./dist",
+        "baseUrl": ".",
+        "paths": {
+            "*": [
+                "node_modules/*"
+            ]
+        }
     },
     "include": [
-      "src/**/*"
+        "src/**/*",
+        "declarations.d.ts"
     ]
-  }
+}
