--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "appId": "crm-uzbek",
     "productName": "CRM",
     "nodeGypRebuild": false,
-    "npmRebuild": true,
+    "npmRebuild": false,
     "directories": {
       "output": "build/output"
     },
@@ -65,7 +65,7 @@
     "datatables.net": "^2.0.0",
     "datatables.net-dt": "^2.0.0",
     "datatables.net-responsive-dt": "^3.0.0",
-    "duckdb": "^0.10.2",
+    "duckdb": "^1.0.0",
     "eta": "^3.2.0",
     "flatpickr": "^4.6.13",
     "i18n": "^0.15.1",
